# mcputil

./: README.md  pyproject.toml
examples/basic/: README.md  basic.py  server.py
examples/code-execution/: README.md  agent.py  google_drive.py  mcp.json  salesforce.py
examples/code-execution/output/servers/google_drive/: get_document.py
examples/code-execution/output/servers/salesforce/: udpate_record.py
examples/group/: README.md  group.py
examples/progress/: README.md  progress.py  server.py
src/mcputil/: __init__.py  client.py  func.py  group.py  tool.py
src/mcputil/cli/: __main__.py  gen.py
