[project]
name = "mcputil"
version = "0.1.0"
description = "A utility for Model Context Protocol."
readme = "README.md"
authors = [
    {name = "RussellLuo", email = "luopeng.he@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.19.0",
    "aiorwlock>=1.5.0",
    "jsonschema>=4.25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcputil"]
