[project]
name = "mcputil"
version = "0.6.1"
description = "A lightweight library that converts MCP tools into Python tools (function-like objects)."
readme = "README.md"
authors = [
    {name = "RussellLuo", email = "luopeng.he@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.19.0",
    "aiorwlock>=1.5.0",
    "jsonschema>=4.25.1",
]

[project.scripts]
mcputil = "mcputil.cli.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcputil"]
